samples/_failures_safe/1761368552_a8f6a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46d5a933.c: In function ‘main’:
./samples/SAFE/__tmp_46d5a933.c:151:12: error: missing terminating " character
  151 |     printf("\nMatrix Transposition:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_46d5a933.c:151:5: error: expected expression at end of input
  151 |     printf("\nMatrix Transposition:\
      |     ^~~~~~
./samples/SAFE/__tmp_46d5a933.c:151:5: error: expected declaration or statement at end of input
